--- a/client-myjss/src/app/modules/my-account/components/edit-address/edit-address.component.html
+++ b/client-myjss/src/app/modules/my-account/components/edit-address/edit-address.component.html
@@ -13,7 +13,7 @@
   </div>
   <div class="card-body" *ngIf="documents">
     <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-0 mb-lg-1 mb-xl-3">
-      <i class="ai-briefcase text-primary lead pe-1 me-2"></i>
+      <i class="ai-map-pin text-primary lead pe-1 me-2"></i>
       <h2 class="h4 mb-0">
         Modifier les adresses </h2>
     </div>
