--- a/client/src/app/modules/administration/components/constant/constant.component.html
+++ b/client/src/app/modules/administration/components/constant/constant.component.html
@@ -871,6 +871,14 @@
           </tr>
           <tr>
             <td>
+              <select-active-directory-group [(model)]="constant.activeDirectoryGroupSales"
+                label="Groupe Active Directory - Commerciaux" [form]="constantForm"
+                propertyName="activeDirectoryGroupSales" [isMandatory]=" true"
+                [isDisabled]="!editMode"></select-active-directory-group>
+            </td>
+          </tr>
+          <tr>
+            <td>
               <select-contract-type [(model)]="constant.domiciliationContractTypeRouteEmail"
                 label="Contrat de domiciliation - redirection par mail" [form]="constantForm"
                 propertyName="domiciliationContractTypeRouteEmail" [isMandatory]="true" [isDisabled]="!editMode">
